--- a/ReactTypeScriptDemoPractice/package.json
+++ b/ReactTypeScriptDemoPractice/package.json
@@ -36,8 +36,8 @@
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "5.1.7",
     "ajv": "6.12.0",
-    "axios": "0.21.1",
     "autoprefixer": "^9.1.0",
+    "axios": "0.21.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
@@ -65,6 +65,7 @@
     "react-dom": "16.13.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
+    "react-sliding-pane": "^7.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack": "4.42.1",
